--- a/livraria/WebContent/livro.xhtml
+++ b/livraria/WebContent/livro.xhtml
@@ -1,32 +1,88 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
+		<h:messages />
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 
 				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}" />
+				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+					required="true" requiredMessage="Título Obrigatório" maxlength="40" validatorMessage="O Título pode ter até 40 caracteres">
+					<f:validateLength maximum="40" />
+				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" />
 
 				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
+				<h:inputText id="preco" value="#{livroBean.livro.preco}" validatorMessage="Valor mínimo R$1,00 e Máximo R$1.000,00">
+					<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
+				</h:inputText> 
 
 				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
 				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento}" />
+					value="#{livroBean.livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm"
+						 />
+				</h:inputText>
 
 			</h:panelGrid>
 		</fieldset>
 
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}" />
+		<fieldset>
+			<legend>Dados do Autor</legend>
+
+			<h:outputLabel value="Selecione Autor: " for="selectAutor" />
+			<h:selectOneMenu id="selectAutor" value="#{livroBean.autorId}">
+				<f:selectItems value="#{livroBean.autores}" var="autor"
+					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+			</h:selectOneMenu>
+			<h:commandButton value="Confirmar Autor"
+				actionListener="#{livroBean.gravarAutor}" />
+
+			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+				<h:column>
+					<h:outputText value="#{autor.nome}"></h:outputText>
+				</h:column>
+			</h:dataTable>
+
+		</fieldset>
+
+		<h:commandButton value="Gravar" actionListener="#{livroBean.gravar}" />
+
+		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro"
+			class="table">
+
+			<h:column>
+				<f:facet name="header">Título</f:facet>
+				<h:outputText value="#{livro.titulo}" />
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">ISBN</f:facet>
+				<h:outputText value="#{livro.isbn}" />
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">Preço</f:facet>
+				<h:outputText value="#{livro.preco}" />
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">Data</f:facet>
+				<h:outputText value="#{livro.dataLancamento.time}">
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm"/>
+				</h:outputText>
+			</h:column>
+
+		</h:dataTable>
 	</h:form>
 </h:body>
 
