Fim aula 7 Navegação e o ciclo de vida dos componentes JSF

--- a/livraria/WebContent/autor.xhtml
+++ b/livraria/WebContent/autor.xhtml
@@ -11,7 +11,7 @@
 				<h:panelGrid columns="2">
 					<h:outputLabel value="Nome:" for="nome" />
 					<h:inputText id="nome" value="#{autorBean.autor.nome}" />
-					<h:commandButton value="Gravar" actionListener="#{autorBean.gravar}" />
+					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 				</h:panelGrid>
 			</fieldset>
 		</h:form>
