--- a/livraria/WebContent/livro.xhtml
+++ b/livraria/WebContent/livro.xhtml
@@ -3,23 +3,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-
+<h:head/>
 <h:body>
 	<h1>Novo Livro</h1>
 	<h:form>
-		<h:messages />
+		<h:messages id="messages"/>
 		<fieldset>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 
 				<h:outputLabel value="Titulo:" for="titulo" />
 				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
-					required="true" requiredMessage="Título Obrigatório" maxlength="40" validatorMessage="O Título pode ter até 40 caracteres">
-					<f:validateLength maximum="40" />
+					required="true" requiredMessage="Título Obrigatório" maxlength="40" validatorMessage="O Título pode ter de 3 até 40 caracteres">
+					<f:validateLength maximum="40" minimum="3"/>					
+					<f:ajax execute="titulo" render="messages" event="blur" />
 				</h:inputText>
 
 				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" >
+					<f:ajax execute="isbn" render="messages" event="keyup" />
+				</h:inputText>
 
 				<h:outputLabel value="Preço:" for="preco" />
 				<h:inputText id="preco" value="#{livroBean.livro.preco}" validatorMessage="Valor mínimo R$1,00 e Máximo R$1.000,00">
@@ -40,23 +43,29 @@
 			<legend>Dados do Autor</legend>
 
 			<h:outputLabel value="Selecione Autor: " for="selectAutor" />
-			<h:selectOneMenu id="selectAutor" value="#{livroBean.autorId}">
+			<h:selectOneMenu id="selectAutor" value="#{livroBean.autorId}" >
 				<f:selectItems value="#{livroBean.autores}" var="autor"
 					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
 			</h:selectOneMenu>
-			<h:commandButton value="Confirmar Autor"
-				actionListener="#{livroBean.gravarAutor}" />
+			<h:commandButton value="Confirmar Autor" actionListener="#{livroBean.gravarAutor}" >
+				<f:ajax execute="selectAutor" render="autorList"/>
+			</h:commandButton>
 
-			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor">
+			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="autorList">
 				<h:column>
 					<h:outputText value="#{autor.nome}"></h:outputText>
 				</h:column>
 			</h:dataTable>
+			
+			<h:commandLink value="Cadastrar novo autor" action="autor?faces-redirect=true" immediate="true"/>
 
 		</fieldset>
 
-		<h:commandButton value="Gravar" actionListener="#{livroBean.gravar}" />
-
+		<h:commandButton value="Gravar" actionListener="#{livroBean.gravar}" >
+			<f:ajax execute="@form" render="@form :tabelaLivros" />
+		</h:commandButton>
+	</h:form>
+	
 		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro"
 			class="table">
 
@@ -82,8 +91,8 @@
 				</h:outputText>
 			</h:column>
 
-		</h:dataTable>
-	</h:form>
+		</h:dataTable>	
+	
 </h:body>
 
 </html>
