--- a/livraria/WebContent/livro.xhtml
+++ b/livraria/WebContent/livro.xhtml
@@ -2,70 +2,86 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
-<h:head/>
-<h:body>
-	<h1>Novo Livro</h1>
-	<h:form>
-		<h:messages id="messages"/>
-		<fieldset>
-			<legend>Dados do Livro</legend>
-			<h:panelGrid columns="2">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-				<h:outputLabel value="Titulo:" for="titulo" />
-				<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
-					required="true" requiredMessage="Título Obrigatório" maxlength="40" validatorMessage="O Título pode ter de 3 até 40 caracteres">
-					<f:validateLength maximum="40" minimum="3"/>					
-					<f:ajax execute="titulo" render="messages" event="blur" />
-				</h:inputText>
+<ui:composition template="_template.xhtml">
 
-				<h:outputLabel value="ISBN:" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}" >
-					<f:ajax execute="isbn" render="messages" event="keyup" />
-				</h:inputText>
 
-				<h:outputLabel value="Preço:" for="preco" />
-				<h:inputText id="preco" value="#{livroBean.livro.preco}" validatorMessage="Valor mínimo R$1,00 e Máximo R$1.000,00">
-					<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
-				</h:inputText> 
+	<ui:define name="titulo">
+		Novo Livro
+	</ui:define>
 
-				<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-				<h:inputText id="dataLancamento"
-					value="#{livroBean.livro.dataLancamento.time}">
-					<f:convertDateTime pattern="dd/MM/yyyy HH:mm"
-						 />
-				</h:inputText>
+	<ui:define name="conteudo">
 
-			</h:panelGrid>
-		</fieldset>
 
-		<fieldset>
-			<legend>Dados do Autor</legend>
 
-			<h:outputLabel value="Selecione Autor: " for="selectAutor" />
-			<h:selectOneMenu id="selectAutor" value="#{livroBean.autorId}" >
-				<f:selectItems value="#{livroBean.autores}" var="autor"
-					itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
-			</h:selectOneMenu>
-			<h:commandButton value="Confirmar Autor" actionListener="#{livroBean.gravarAutor}" >
-				<f:ajax execute="selectAutor" render="autorList"/>
+		<h:form>
+			<h:messages id="messages" />
+			<fieldset>
+				<legend>Dados do Livro</legend>
+				<h:panelGrid columns="2">
+
+					<h:outputLabel value="Titulo:" for="titulo" />
+					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+						required="true" requiredMessage="Título Obrigatório"
+						maxlength="40"
+						validatorMessage="O Título pode ter de 3 até 40 caracteres">
+						<f:validateLength maximum="40" minimum="3" />
+						<f:ajax execute="titulo" render="messages" event="blur" />
+					</h:inputText>
+
+					<h:outputLabel value="ISBN:" for="isbn" />
+					<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
+						validator="#{livroBean.comecaComDigitoUm}">
+						<f:ajax execute="isbn" render="messages" event="keyup" />
+					</h:inputText>
+
+					<h:outputLabel value="Preço:" for="preco" />
+					<h:inputText id="preco" value="#{livroBean.livro.preco}"
+						validatorMessage="Valor mínimo R$1,00 e Máximo R$1.000,00">
+						<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
+					</h:inputText>
+
+					<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
+					<h:inputText id="dataLancamento"
+						value="#{livroBean.livro.dataLancamento.time}">
+						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+					</h:inputText>
+
+				</h:panelGrid>
+			</fieldset>
+
+			<fieldset>
+				<legend>Dados do Autor</legend>
+
+				<h:outputLabel value="Selecione Autor: " for="selectAutor" />
+				<h:selectOneMenu id="selectAutor" value="#{livroBean.autorId}">
+					<f:selectItems value="#{livroBean.autores}" var="autor"
+						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+				</h:selectOneMenu>
+				<h:commandButton value="Confirmar Autor"
+					actionListener="#{livroBean.gravarAutor}">
+					<f:ajax execute="selectAutor" render="autorList" />
+				</h:commandButton>
+
+				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+					id="autorList">
+					<h:column>
+						<h:outputText value="#{autor.nome}"></h:outputText>
+					</h:column>
+				</h:dataTable>
+
+				<h:commandLink value="Cadastrar novo autor"
+					action="autor?faces-redirect=true" immediate="true" />
+
+			</fieldset>
+
+			<h:commandButton value="Gravar" actionListener="#{livroBean.gravar}">
+				<f:ajax execute="@form" render="@form :tabelaLivros" />
 			</h:commandButton>
+		</h:form>
 
-			<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor" id="autorList">
-				<h:column>
-					<h:outputText value="#{autor.nome}"></h:outputText>
-				</h:column>
-			</h:dataTable>
-			
-			<h:commandLink value="Cadastrar novo autor" action="autor?faces-redirect=true" immediate="true"/>
-
-		</fieldset>
-
-		<h:commandButton value="Gravar" actionListener="#{livroBean.gravar}" >
-			<f:ajax execute="@form" render="@form :tabelaLivros" />
-		</h:commandButton>
-	</h:form>
-	
 		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro"
 			class="table">
 
@@ -87,12 +103,16 @@
 			<h:column>
 				<f:facet name="header">Data</f:facet>
 				<h:outputText value="#{livro.dataLancamento.time}">
-					<f:convertDateTime pattern="dd/MM/yyyy HH:mm"/>
+					<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 				</h:outputText>
 			</h:column>
 
-		</h:dataTable>	
+		</h:dataTable>
+	</ui:define>
 	
-</h:body>
+	<ui:define name="rodape">	
+		Livro
+	</ui:define>
 
+</ui:composition>
 </html>
