--- a/livraria/WebContent/autor.xhtml
+++ b/livraria/WebContent/autor.xhtml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <ui:composition template="_template.xhtml">
+
+	<f:metadata>
+		<f:viewParam name="autorId" value="#{autorBean.autorId}"></f:viewParam>
+		<f:viewAction action="#{autorBean.carregaAutorPelaID}" if="#{param.autorId != null}" />
+	</f:metadata>
+	
 	<ui:define name="titulo">
 		Novo Autor
 	</ui:define>
@@ -22,6 +28,12 @@
 						<f:ajax event="blur" render="messageNome" />
 					</h:inputText>
 					<h:message for="nome" id="messageNome" />
+					
+					<h:outputLabel value="Email:" for="email" />
+					<h:inputText id="email" value="#{autorBean.autor.email}">
+						<f:passThroughAttribute name="type" value="email"/>						
+					</h:inputText>
+					<h:message for="email" id="messageEmail" />					
 
 					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 				</h:panelGrid>
@@ -38,6 +50,11 @@
 			<h:column>
 				<f:facet name="header">Nome</f:facet>
 				<h:outputText value="#{autor.nome}" />
+			</h:column>
+			
+			<h:column>
+				<f:facet name="header">Email</f:facet>
+				<h:outputText value="#{autor.email}" />
 			</h:column>
 
 			<h:column>
