Final Aula 12 Autorização pelo PhaseListener

--- a/livraria/WebContent/_template.xhtml
+++ b/livraria/WebContent/_template.xhtml
@@ -8,6 +8,8 @@
 </h:head>
 <h:body>
 	<div id="cabecalho">
+		<h:outputText value="#{sessionScope['usuarioLogado'].email}" />
+		<br/>
 		<h:graphicImage library="img" name="logo.png" />
 		<h1>
 			<ui:insert name="titulo"></ui:insert>
