--- a/livraria/WebContent/login.xhtml
+++ b/livraria/WebContent/login.xhtml
@@ -13,6 +13,7 @@
         </ui:define>
 
         <ui:define name="conteudo">
+        <h:messages globalOnly="true" />
             <h:form id="login">
                 <fieldset>
                     <legend>Login</legend>
