--- a/livraria/WebContent/login.xhtml
+++ b/livraria/WebContent/login.xhtml
@@ -2,41 +2,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <ui:composition template="_template.xhtml">
+<ui:composition template="_template.xhtml">
 
-        <ui:define name="titulo">
-                Login
+	<ui:define name="titulo">
+             <p:outputPanel>Login</p:outputPanel>   
         </ui:define>
 
-        <ui:define name="conteudo">
-        <h:messages globalOnly="true" />
-            <h:form id="login">
-                <fieldset>
-                    <legend>Login</legend>
-                    <h:panelGrid columns="3">
+	<ui:define name="conteudo">
+		<p:messages globalOnly="true" />
+		<h:form id="login">
+			<p:fieldset legend="Login">
+				<h:panelGrid columns="3">
 
-                        <h:outputLabel value="Email:" for="email" />
-                        <h:inputText id="email" value="#{loginBean.usuario.email}"
-                            required="true">
-                            <f:passThroughAttribute name="type" value="email" />
-                        </h:inputText>
+					<h:outputLabel value="Email:" for="email" />
+					<p:inputText id="email" value="#{loginBean.usuario.email}"
+						required="true">
+						<f:passThroughAttribute name="type" value="email" />
+					</p:inputText>
 
-                        <h:message for="email" id="messageEmail" />
+					<p:message for="email" id="messageEmail" />
 
-                        <h:outputLabel value="Senha:" for="senha" />                        
-                        <h:inputSecret id="senha" value="#{loginBean.usuario.senha}" required="true" />
+					<h:outputLabel value="Senha:" for="senha" />
+					<p:password id="senha" value="#{loginBean.usuario.senha}"
+						feedback="true" promptLabel="Digite a sua senha" weakLabel="Fraca"
+						goodLabel="Bom" strongLabel="Forte" />
 
-                        <h:message for="senha" id="messageSenha" />
 
-                        <h:commandButton value="Efetuar Login" 
-                            action="#{loginBean.efetuaLogin}" />
-                    </h:panelGrid>
-                </fieldset>
-            </h:form>
-        </ui:define>
-    </ui:composition>
+					<p:message for="senha" id="messageSenha" />
+
+					<p:commandButton value="Efetuar Login"
+						action="#{loginBean.efetuaLogin}" update="@form" process="@form" />
+				</h:panelGrid>
+			</p:fieldset>
+		</h:form>
+	</ui:define>
+</ui:composition>
 </html>
