--- a/livraria/WebContent/login.xhtml
+++ b/livraria/WebContent/login.xhtml
@@ -10,8 +10,10 @@
 <ui:composition template="_template.xhtml">
 
 	<ui:define name="titulo">
-             <p:outputPanel>Login</p:outputPanel>   
-        </ui:define>
+             Login   
+     </ui:define>
+
+	<p:outputPanel>Login</p:outputPanel>
 
 	<ui:define name="conteudo">
 		<p:messages globalOnly="true" />
