Final AULA 04 Mais usabilidade na página de livros

--- a/livraria/WebContent/livro.xhtml
+++ b/livraria/WebContent/livro.xhtml
@@ -3,13 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="_template.xhtml">
 
 	<f:metadata>
-	    <f:viewParam name="livroId" value="#{livroBean.livroId}"/>
-	    <f:viewAction action="#{livroBean.carregaPelaId}" if="#{param['livroId'] != null}"/>
+		<f:viewParam name="livroId" value="#{livroBean.livroId}" />
+		<f:viewAction action="#{livroBean.carregaPelaId}"
+			if="#{param['livroId'] != null}" />
 	</f:metadata>
 
 
@@ -17,86 +19,96 @@
 		Novo Livro
 	</ui:define>
 
+	<p:outputPanel>Novo Livro</p:outputPanel>
+
 	<ui:define name="conteudo">
 
 
 
 		<h:form>
-			<h:messages id="messages" />
-			<fieldset>
-				<legend>Dados do Livro</legend>
-				<h:panelGrid columns="2">
+			<p:messages id="messages" />
+			<p:fieldset legend="Dados do Livro">
+				<p:panelGrid columns="2">
 
-					<h:outputLabel value="Titulo:" for="titulo" />
-					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+					<p:outputLabel value="Titulo:" for="titulo" />
+					<p:inputText id="titulo" value="#{livroBean.livro.titulo}"
 						required="true" requiredMessage="Título Obrigatório"
 						maxlength="40"
 						validatorMessage="O Título pode ter de 3 até 40 caracteres">
 						<f:validateLength maximum="40" minimum="3" />
 						<f:ajax execute="titulo" render="messages" event="blur" />
-					</h:inputText>
+					</p:inputText>
 
-					<h:outputLabel value="ISBN:" for="isbn" />
-					<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
-						validator="#{livroBean.comecaComDigitoUm}">
+					<p:outputLabel value="ISBN:" for="isbn" />
+					<p:inputMask id="isbn" value="#{livroBean.livro.isbn}"
+						validator="#{livroBean.comecaComDigitoUm}"
+						mask="999-9-99-999999-9">
 						<f:ajax execute="isbn" render="messages" event="keyup" />
-					</h:inputText>
+					</p:inputMask>
 
-					<h:outputLabel value="Preço:" for="preco" />
-					<h:inputText id="preco" value="#{livroBean.livro.preco}"
+					<p:outputLabel value="Preço:" for="preco" />
+					<p:inputNumber id="preco" value="#{livroBean.livro.preco}"
 						validatorMessage="Valor mínimo R$1,00 e Máximo R$1.000,00">
 						<f:validateDoubleRange minimum="1.0" maximum="1000.00" />
-					</h:inputText>
+					</p:inputNumber>
 
-					<h:outputLabel value="Data de Lançamento:" for="dataLancamento" />
-					<h:inputText id="dataLancamento"
-						value="#{livroBean.livro.dataLancamento.time}">
-						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
-					</h:inputText>
+					<p:outputLabel value="Data de Lançamento:" for="dataLancamento" />
+					<p:calendar id="dataLancamento"
+						value="#{livroBean.livro.dataLancamento.time}"
+						pattern="dd/MM/yyyy" />
 
-				</h:panelGrid>
-			</fieldset>
 
-			<fieldset>
-				<legend>Dados do Autor</legend>
+				</p:panelGrid>
+			</p:fieldset>
 
-				<h:outputLabel value="Selecione Autor: " for="selectAutor" />
-				<h:selectOneMenu id="selectAutor" value="#{livroBean.autorId}">
-					<f:selectItems value="#{livroBean.autores}" var="autor"
-						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
-				</h:selectOneMenu>
-				<h:commandButton value="Confirmar Autor"
-					actionListener="#{livroBean.gravarAutor}">
-					<f:ajax execute="selectAutor" render="autorList" />
-				</h:commandButton>
+			<p:fieldset legend="Dados do Autor">
+				<p:panelGrid columns="4">
+					<p:outputLabel value="Selecione Autor: " for="selectAutor" />
+					<p:selectOneMenu id="selectAutor" value="#{livroBean.autorId}">
+						<f:selectItems value="#{livroBean.autores}" var="autor"
+							itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
+					</p:selectOneMenu>
+					<p:commandButton value="Confirmar Autor"
+						actionListener="#{livroBean.gravarAutor}"
+						process="@this selectAutor" update="autorList" />
 
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
-					id="autorList">
-					<h:column>
+					<p:commandLink value="Cadastrar novo autor"
+						action="autor?faces-redirect=true" immediate="true"
+						process="@this selectAutor" update="autorList" />
+				</p:panelGrid>
+
+				<p:dataList value="#{livroBean.autoresDoLivro}" var="autor"
+					type="definition" id="autorList">
+
+
+					<p:column>
+						<p:commandLink action="#{livroBean.removeAutorDoLivro(autor)}" process="@this"
+							update="autorList" style="text-decoration: none;">
+							<i class="fa fa-fw fa-trash" />
+						</p:commandLink>
+					</p:column>
+
+					<p:column>
 						<h:outputText value="#{autor.nome}"></h:outputText>
-					</h:column>
-					
-				    <h:column>
-				        <h:commandLink value="X" action="#{livroBean.removeAutorDoLivro(autor)}" />
-				    </h:column>					
-				</h:dataTable>
+					</p:column>
 
-				<h:commandLink value="Cadastrar novo autor"
-					action="autor?faces-redirect=true" immediate="true" />
-			</fieldset>
+				</p:dataList>
 
-			<h:commandButton value="Gravar" actionListener="#{livroBean.gravar}">
-				<f:ajax execute="@form" render="@form :tabelaLivros" />
-			</h:commandButton>
+
+			</p:fieldset>
+
+			<p:commandButton value="Gravar" actionListener="#{livroBean.gravar}"
+				process="@form" update="@form :tabelaLivros" />
+
 		</h:form>
 
 		<h:dataTable id="tabelaLivros" value="#{livroBean.livros}" var="livro"
 			class="table">
-			
+
 			<h:column>
 				<f:facet name="header">ID</f:facet>
 				<h:outputText value="#{livro.id}" />
-			</h:column>			
+			</h:column>
 
 			<h:column>
 				<f:facet name="header">Título</f:facet>
@@ -119,26 +131,27 @@
 					<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
 				</h:outputText>
 			</h:column>
-			
+
 			<h:column>
 				<f:facet name="header">Alterar</f:facet>
 				<h:form>
-					<h:commandLink value="Altera" action="#{livroBean.carregaLivro(livro)}"/>
+					<h:commandLink value="Altera"
+						action="#{livroBean.carregaLivro(livro)}" />
 				</h:form>
-			</h:column>			
-			
-			<h:column>				
+			</h:column>
+
+			<h:column>
 				<f:facet name="header">Excluir</f:facet>
 				<h:form>
 					<h:commandLink value="X" action="#{livroBean.removeLivro(livro)}" />
 				</h:form>
 			</h:column>
-			
+
 
 
 		</h:dataTable>
 	</ui:define>
-	
+
 	<ui:define name="rodape">	
 		Livro
 	</ui:define>
