Fim aula AULA 08 Gráfico com Primefaces e fim curso Java e JSF 2 - II: Componentes ricos com Primefaces

--- a/livraria/WebContent/_template.xhtml
+++ b/livraria/WebContent/_template.xhtml
@@ -33,6 +33,9 @@
 
 				<p:menuitem value="Ring" action="ring?faces-redirect=true"
 					icon="fa fa-fw fa-shirtsinbulk" />
+					
+				<p:menuitem value="Vendas" action="vendas?faces-redirect=true"
+					icon="fa fa-fw fa-image" />					
 
 				<f:facet name="options">
 					<p:commandButton value="Logout" action="#{loginBean.deslogar}"
