--- a/livraria/WebContent/_template.xhtml
+++ b/livraria/WebContent/_template.xhtml
@@ -16,10 +16,9 @@
 </h:head>
 <h:body>
 	<div id="cabecalho">
-
-
-
 		<p:growl id="messages" showDetail="true" autoUpdate="true" />
+
+		<h:graphicImage library="img" name="logo.png" />
 
 		<h:form rendered="#{ usuarioLogado != null  }">
 			<p:menubar>
@@ -33,29 +32,33 @@
 
 				<p:menuitem value="Ring" action="ring?faces-redirect=true"
 					icon="fa fa-fw fa-shirtsinbulk" />
-					
+
 				<p:menuitem value="Vendas" action="vendas?faces-redirect=true"
-					icon="fa fa-fw fa-image" />					
+					icon="fa fa-fw fa-image" />
 
 				<f:facet name="options">
-					<p:commandButton value="Logout" action="#{loginBean.deslogar}"
-						icon="ui-icon-extlink" />
+
+				</f:facet>
+
+				<f:facet name="options">
+
+					<div style="position: relative; z-index: 4;" class="fc-agenda-head">
+
+						<p:panelGrid columns="2">
+
+							<p:themeSwitcher id="basic" style="width:165px"
+								value="#{temaBean.tema}">
+								<f:selectItem itemLabel="Choose Theme" itemValue="" />
+								<f:selectItems value="#{temaBean.temas}" var="tema"
+									itemLabel="#{tema}" itemValue="#{tema}" />
+								<f:ajax />
+							</p:themeSwitcher>
+							<p:commandButton value="Logout" action="#{loginBean.deslogar}" icon="ui-icon-extlink" />
+						</p:panelGrid>
+					</div>
 				</f:facet>
 			</p:menubar>
 		</h:form>
-		
-			<h:panelGrid columns="2">
-				<h:graphicImage library="img" name="logo.png" />
-							
-				<h:form rendered="#{usuarioLogado != null}" style="position:absolute; right: 10px">
-					<p:themeSwitcher id="basic" style="width:165px" value="#{temaBean.tema}">
-						<f:selectItem itemLabel="Choose Theme" itemValue="" />
-						<f:selectItems value="#{temaBean.temas}" var="tema" itemLabel="#{tema}" itemValue="#{tema}" />
-						<f:ajax />
-					</p:themeSwitcher>
-				</h:form>
-			</h:panelGrid>	
-
 
 		<h1>
 			<ui:insert name="titulo"></ui:insert>
