--- a/livraria/WebContent/livro.xhtml
+++ b/livraria/WebContent/livro.xhtml
@@ -26,7 +26,7 @@
 
 
 		<h:form>
-			<p:messages id="messages" />
+			<p:messages />
 			<p:fieldset legend="Dados do Livro">
 				<p:panelGrid columns="3">
 
