Final AULA 02 Relacionando Livro com Autores

--- a/casadocodigo/src/main/webapp/livro/form.xhtml
+++ b/casadocodigo/src/main/webapp/livro/form.xhtml
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
@@ -22,7 +21,16 @@
 			<h:outputLabel value="Preço" />
 			<h:inputText value="#{adminLivrosBean.livro.preco}" />
 		</div>
-		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salva()}"/>
+
+		<div>
+			<h:outputLabel value="Autores" />
+			<h:selectManyListbox value="#{adminLivrosBean.autoresId}" converter="javax.faces.Integer">
+				<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
+					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />
+			</h:selectManyListbox>
+		</div>
+
+		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salva()}" />
 	</h:form>
 </h:body>
 </html>
