Final aula 03 Validando e Exibindo Mensagens no Formulário

--- a/casadocodigo/src/main/webapp/livro/lista.xhtml
+++ b/casadocodigo/src/main/webapp/livro/lista.xhtml
@@ -6,6 +6,8 @@
 
 <h:head />
 
+<h:messages />
+
 <h:dataTable var="livro" value="#{adminListaLivrosBean.livros}">
 	<h:column>
 		<f:facet name="header">Título</f:facet>
