--- a/casadocodigo/src/main/webapp/livro/form.xhtml
+++ b/casadocodigo/src/main/webapp/livro/form.xhtml
@@ -7,30 +7,40 @@
 <h:body>
 	<h:form>
 		<div>
-			<h:outputLabel value="titulo" />
-			<h:inputText value="#{adminLivrosBean.livro.titulo}" />
+			<h:outputLabel value="Título" />
+			<h:inputText value="#{adminLivrosBean.livro.titulo}" required="true"
+				id="titulo" />
+			<h:message for="titulo" />
+			<!-- ADICIONAMOS MENSAGEM ESPECÍFICA PARA CADA CAMPO -->
 		</div>
 		<div>
-			<h:outputLabel value="descricao" />
-			<h:inputTextarea rows="4" cols="8"
-				value="#{adminLivrosBean.livro.descricao}" />
+			<h:outputLabel value="Descrição" />
+			<h:inputTextarea rows="4" cols="20" required="true"
+				value="#{adminLivrosBean.livro.descricao}" id="descricao" />
+			<h:message for="descricao" />
 		</div>
-		<h:outputLabel value="Números de Páginas" />
-		<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}" />
+		<div>
+			<h:outputLabel value="Número de Páginas" />
+			<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
+				required="true" id="numeroPaginas" />
+			<h:message for="numeroPaginas" />
+		</div>
 		<div>
 			<h:outputLabel value="Preço" />
-			<h:inputText value="#{adminLivrosBean.livro.preco}" />
+			<h:inputText value="#{adminLivrosBean.livro.preco}" required="true"
+				id="preco" />
+			<h:message for="preco" />
 		</div>
-
 		<div>
 			<h:outputLabel value="Autores" />
-			<h:selectManyListbox value="#{adminLivrosBean.autoresId}" converter="javax.faces.Integer">
+			<h:selectManyListbox value="#{adminLivrosBean.autoresId}"
+				converter="javax.faces.Integer" id="autores">
 				<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
 					itemValue="#{autor.id}" itemLabel="#{autor.nome}" />
 			</h:selectManyListbox>
+			<h:message for="autores" />
 		</div>
-
-		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salva()}" />
+		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
 	</h:form>
 </h:body>
 </html>
