--- a/casadocodigo/src/main/webapp/livros/lista.xhtml
+++ b/casadocodigo/src/main/webapp/livros/lista.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:c="http://java.sun.com/jsp/jstl/xml">
 
 <h:head />
 
@@ -31,6 +32,11 @@
                 #{autor.nome},
             </ui:repeat>
 	</h:column>
+		<h:column>
+			<f:facet name="header">Capa Path</f:facet>
+			<img src="#{request.contextPath}/file/#{livro.capaPath}"
+				height="30%" alt="#{livro.titulo}" />
+		</h:column>
 </h:dataTable>
 
 </html>
