--- a/casadocodigo/src/main/webapp/livros/form.xhtml
+++ b/casadocodigo/src/main/webapp/livros/form.xhtml
@@ -3,55 +3,82 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html">
 
-<h:head />
+<h:head>
+	<h:outputStylesheet library="bootstrap-3.4.1-dist"
+		name="css/bootstrap.min.css" />
+	<h:outputStylesheet library="css" name="style-admin.css" />
+	<title>Formulário de livro</title>
+</h:head>
 <h:body>
-	<h:form enctype="multipart/form-data">
-		<div>
-			<h:outputLabel value="Título" />
-			<h:inputText value="#{adminLivrosBean.livro.titulo}" required="true"
-				id="titulo" />
-			<h:message for="titulo" />
-			<!-- ADICIONAMOS MENSAGEM ESPECÍFICA PARA CADA CAMPO -->
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Casa do Código</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><h:link value="Lista" outcome="lista" /></li>
+					<li class="active"><a href="#">Cadastro</a></li>
+				</ul>
+			</div>
+			<!--/.nav-collapse -->
 		</div>
-		<div>
-			<h:outputLabel value="Descrição" />
-			<h:inputTextarea rows="4" cols="20" required="true"
-				value="#{adminLivrosBean.livro.descricao}" id="descricao" />
-			<h:message for="descricao" />
-		</div>
-		<div>
-			<h:outputLabel value="Número de Páginas" />
-			<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
-				required="true" id="numeroPaginas" />
-			<h:message for="numeroPaginas" />
-		</div>
-		<div>
-			<h:outputLabel value="Preço" />
-			<h:inputText value="#{adminLivrosBean.livro.preco}" required="true"
-				id="preco" />
-			<h:message for="preco" />
-		</div>
-		<div>
-			<h:outputLabel value="Autores" />
-			<h:selectManyListbox value="#{adminLivrosBean.livro.autores}"
-				converter="autorConverter" id="autores">
-				<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
-					itemValue="#{autor}" itemLabel="#{autor.nome}" />
-			</h:selectManyListbox>
-			<h:message for="autores" />
-		</div>
-		<div>
-			<h:outputLabel value="Data de Publicação" />
-			<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
-				id="dataPublicacao" />
-			<h:message for="dataPublicacao" />
-		</div>
-		<div>
-			<h:outputLabel value="Capa do Livro" />
-			<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro" />
-			<h:message for="capaLivro" />
-		</div>
-		<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}" />
-	</h:form>
+	</nav>
+	<div class="container">
+		<h1>Cadastro de Livros</h1>
+
+		<h:form enctype="multipart/form-data">
+			<div class="form-group">
+				<h:outputLabel value="Título" />
+				<h:inputText value="#{adminLivrosBean.livro.titulo}" required="true"
+					id="titulo" styleClass="form-control" />
+				<h:message for="titulo" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Descrição" />
+				<h:inputTextarea rows="4" cols="20" required="true"
+					value="#{adminLivrosBean.livro.descricao}" id="descricao"
+					styleClass="form-control" />
+				<h:message for="descricao" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Número de Páginas" />
+				<h:inputText value="#{adminLivrosBean.livro.numeroPaginas}"
+					required="true" id="numeroPaginas" styleClass="form-control" />
+				<h:message for="numeroPaginas" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Preço" />
+				<h:inputText value="#{adminLivrosBean.livro.preco}" required="true"
+					id="preco" styleClass="form-control" />
+				<h:message for="preco" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Autores" />
+				<h:selectManyListbox value="#{adminLivrosBean.livro.autores}"
+					converter="autorConverter" id="autores" styleClass="form-control">
+					<f:selectItems value="#{adminLivrosBean.autores}" var="autor"
+						itemValue="#{autor}" itemLabel="#{autor.nome}" />
+				</h:selectManyListbox>
+				<h:message for="autores" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Data de Publicação" />
+				<h:inputText value="#{adminLivrosBean.livro.dataPublicacao}"
+					id="dataPublicacao" styleClass="form-control" />
+				<h:message for="dataPublicacao" />
+			</div>
+			<div class="form-group">
+				<h:outputLabel value="Capa do Livro" />
+				<h:inputFile value="#{adminLivrosBean.capaLivro}" id="capaLivro"
+					styleClass="form-control" />
+			</div>
+			<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"
+				styleClass="btn btn-primary" />
+
+		</h:form>
+	</div>
+
+
 </h:body>
 </html>
