--- a/casadocodigo/src/main/webapp/livros/lista.xhtml
+++ b/casadocodigo/src/main/webapp/livros/lista.xhtml
@@ -5,38 +5,62 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/xml">
 
-<h:head />
 
-<h:messages />
+<h:head>
+	<h:outputStylesheet library="bootstrap-3.4.1-dist" name="css/bootstrap.min.css" />
+	<h:outputStylesheet library="css" name="style-admin.css" />
+	<title>Lista de Livros</title>
+</h:head>
+<h:body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Casa do Código</a>
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Lista</a></li>
+				<li><h:link value="Cadastro" outcome="form" /></li>
+			</ul>
+		</div>
+	</div>
+	</nav>
 
-<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}">
-	<h:column>
-		<f:facet name="header">Título</f:facet>
+	<div class="container">
+		<h1>Lista de Livros</h1>
+		<h:messages />
+
+		<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
+			styleClass="table table-bordered table-striped ">
+			<h:column>
+				<f:facet name="header">Título</f:facet>
             #{livro.titulo}
         </h:column>
-	<h:column>
-		<f:facet name="header">Descrição</f:facet>
+			<h:column>
+				<f:facet name="header">Descrição</f:facet>
             #{livro.descricao}
         </h:column>
-	<h:column>
-		<f:facet name="header">Páginas</f:facet>
+			<h:column>
+				<f:facet name="header">Páginas</f:facet>
             #{livro.numeroPaginas}
         </h:column>
-	<h:column>
-		<f:facet name="header">Preço</f:facet>
+			<h:column>
+				<f:facet name="header">Preço</f:facet>
             #{livro.preco}
         </h:column>
-	<h:column>
-		<f:facet name="header">Autores</f:facet>
-		<ui:repeat value="#{livro.autores}" var="autor">
+			<h:column>
+				<f:facet name="header">Autores</f:facet>
+				<ui:repeat value="#{livro.autores}" var="autor">
                 #{autor.nome},
             </ui:repeat>
-	</h:column>
-		<h:column>
-			<f:facet name="header">Capa Path</f:facet>
-			<img src="#{request.contextPath}/file/#{livro.capaPath}"
-				height="30%" alt="#{livro.titulo}" />
-		</h:column>
-</h:dataTable>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Capa Path</f:facet>
+				<img src="#{request.contextPath}/file/#{livro.capaPath}"
+					height="30%" alt="#{livro.titulo}" />
+			</h:column>
+		</h:dataTable>
+	</div>
+</h:body>
 
 </html>
