--- a/casadocodigo/src/main/webapp/index.xhtml
+++ b/casadocodigo/src/main/webapp/index.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:o="http://omnifaces.org/ui">
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
@@ -248,15 +249,15 @@
 
 	<main>
 
-
+		<o:cache>
 		<section class="vitrineDestaquinho container">
 			<h2 class="vitrineDestaquinho-titulo">Últimos lançamentos</h2>
 			<ul class="vitrineDestaquinho-lista">
 
 				<ui:repeat value="#{homeBean.ultimosLancamentos()}" var="livro">
-					<li class="livroNaVitrine vitrineDestaquinho-produto">
-					<a href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}" class="livroNaVitrine-link"
-                    title="#{livro.titulo}">
+					<li class="livroNaVitrine vitrineDestaquinho-produto"><a
+						href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}"
+						class="livroNaVitrine-link" title="#{livro.titulo}">
 							<div class="livroNaVitrine-imagemContainer" role="presentation">
 								<img class="livroNaVitrine-imagem"
 									src="#{request.contextPath}/file/#{livro.capaPath}"
@@ -277,9 +278,9 @@
 
 				<ul class="vitrineDaColecao-lista">
 					<ui:repeat value="#{homeBean.demaisLivros()}" var="livro">
-						<li class="livroNaVitrine vitrineDaColecao-produto">
-						<a href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}" class="livroNaVitrine-link"
-                    title="#{livro.titulo}">
+						<li class="livroNaVitrine vitrineDaColecao-produto"><a
+							href="#{request.contextPath}/livro-detalhe.xhtml?id=#{livro.id}"
+							class="livroNaVitrine-link" title="#{livro.titulo}">
 								<div class="livroNaVitrine-imagemContainer" role="presentation">
 									<img class="livroNaVitrine-imagem"
 										src="#{request.contextPath}/file/#{livro.capaPath}"
@@ -291,7 +292,7 @@
 
 			</ul>
 		</section>
-
+		</o:cache>
 
 		<div class="buscaDoRodape container" role="presentation">
 			<form role="search" aria-labelledby="rotuloBuscaDoRodape"
