--- a/casadocodigo/src/main/webapp/livros/form.xhtml
+++ b/casadocodigo/src/main/webapp/livros/form.xhtml
@@ -1,33 +1,17 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-	<h:outputStylesheet library="bootstrap-3.4.1-dist"
-		name="css/bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="style-admin.css" />
-	<title>Formulário de livro</title>
-</h:head>
-<h:body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Casa do Código</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li><h:link value="Lista" outcome="lista" /></li>
-					<li class="active"><a href="#">Cadastro</a></li>
-				</ul>
-			</div>
-			<!--/.nav-collapse -->
-		</div>
-	</nav>
-	<div class="container">
-		<h1>Cadastro de Livros</h1>
+<ui:composition template="/templates/_admin_template.xhtml">
+	<ui:param name="cadastro" value="active" />
+    <ui:define name="body">
+        <h1>Cadastro de livros</h1>
 
-		<h:form enctype="multipart/form-data">
+        <h:form enctype="multipart/form-data">
 			<div class="form-group">
 				<h:outputLabel value="Título" />
 				<h:inputText value="#{adminLivrosBean.livro.titulo}" required="true"
@@ -76,9 +60,9 @@
 			<h:commandButton value="Cadastrar" action="#{adminLivrosBean.salvar}"
 				styleClass="btn btn-primary" />
 
-		</h:form>
-	</div>
+        </h:form>
 
+    </ui:define>
 
-</h:body>
+</ui:composition>
 </html>
