--- a/casadocodigo/src/main/webapp/livros/lista.xhtml
+++ b/casadocodigo/src/main/webapp/livros/lista.xhtml
@@ -1,71 +1,53 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/xml">
+    xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+<ui:composition template="/templates/_admin_template.xhtml">
 
-<h:head>
-	<h:outputStylesheet library="bootstrap-3.4.1-dist" name="css/bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="style-admin.css" />
-	<title>Lista de Livros</title>
-</h:head>
-<h:body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="#">Casa do Código</a>
-		</div>
-		<div id="navbar" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Lista</a></li>
-				<li><h:link value="Cadastro" outcome="form" /></li>
-			</ul>
-		</div>
-	</div>
-	</nav>
+	<ui:param name="lista" value="active" />
 
-	<div class="container">
-		<h1>Lista de Livros</h1>
-		
-		<div>
-			Bem vindo, #{currentUser.get().email}
-		</div>		
-		
-		<h:messages />
+    <ui:define name="body">
 
-		<h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
-			styleClass="table table-bordered table-striped ">
-			<h:column>
-				<f:facet name="header">Título</f:facet>
+        <h1>Lista de livros</h1>
+
+        <h:messages />
+
+        <h:dataTable var="livro" value="#{adminListaLivrosBean.livros}"
+            class="table table-bordered table-striped table-hover">
+            <h:column>
+                <f:facet name="header">Título</f:facet>
             #{livro.titulo}
         </h:column>
-			<h:column>
-				<f:facet name="header">Descrição</f:facet>
+            <h:column>
+                <f:facet name="header">Descrição</f:facet>
             #{livro.descricao}
         </h:column>
-			<h:column>
-				<f:facet name="header">Páginas</f:facet>
+            <h:column>
+                <f:facet name="header">Páginas</f:facet>
             #{livro.numeroPaginas}
         </h:column>
-			<h:column>
-				<f:facet name="header">Preço</f:facet>
+            <h:column>
+                <f:facet name="header">Preço</f:facet>
             #{livro.preco}
         </h:column>
-			<h:column>
-				<f:facet name="header">Autores</f:facet>
-				<ui:repeat value="#{livro.autores}" var="autor">
+            <h:column>
+                <f:facet name="header">Autores</f:facet>
+                <ui:repeat value="#{livro.autores}" var="autor">
                 #{autor.nome},
             </ui:repeat>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Capa Path</f:facet>
-				<img src="#{request.contextPath}/file/#{livro.capaPath}"
-					height="30%" alt="#{livro.titulo}" />
-			</h:column>
-		</h:dataTable>
-	</div>
-</h:body>
+            </h:column>
+            <h:column>
+                <f:facet name="header">Capa Path</f:facet>
+                <img src="#{request.contextPath}/file/#{livro.capaPath}"
+                    height="30%" alt="#{livro.titulo}" />
+            </h:column>
+        </h:dataTable>
 
+    </ui:define>
+
+</ui:composition>
 </html>
